--- a/src/Feed.css
+++ b/src/Feed.css
@@ -35,3 +35,8 @@
 .feed__input > form > button {
     display: none;
 }
+.feed__inputOptions{
+    display: flex;
+    justify-content: space-evenly;
+
+}
