made some changes

--- a/src/Feed.css
+++ b/src/Feed.css
@@ -9,6 +9,9 @@
     padding-bottom: 20px;
     border-radius: 10px;
     margin-bottom: 20px;
+    position: sticky;
+    top:75px;
+    z-index: 1000;
 
 }
 .feed__input{
